--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
       },
       "scripts": {
             "dev": "vite",
-            "build": "vite build"
+            "build": "npx vite build",
+            "preview":"vite preview"
       }
 }
